--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-window": "^1.8.7",
     "react-windowed-select": "^2.0.4",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "types-webpack-bundler": "^1.0.2"
   },
   "devDependencies": {
