--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.54.0",
   "description": "Official monday.com UI resources for application development in React.js",
   "main": "./dist/main.js",
-  "types": "./dist/bundle.d.ts",
+  "types": "./dist/types.d.ts",
   "exports": {
     "./package.json": "./package.json",
     ".": {
@@ -22,8 +22,9 @@
     "test:jest:update": "npm run test:jest -- -u",
     "test:jest:coverage": "npm run test:jest -- --coverage",
     "start": "npm run build-react-icons && webpack --mode production --watch --config webpack/default.config.js",
-    "build": "npm run build-react-icons && webpack --mode production --config webpack/default.config.js && npm run build:esm",
+    "build": "npm run build-react-icons && webpack --mode production --config webpack/default.config.js && npm run build:esm && npm run build:types-index",
     "build:esm": "./scripts/build-esm.js",
+    "build:types-index": "./scripts/build-types-index.js",
     "storybook": "start-storybook -p 7007",
     "build-storybook": "build-storybook",
     "deploy-storybook": "storybook-to-ghpages",
