--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-window": "^1.8.7",
     "react-windowed-select": "^2.0.4",
+    "ts-jest": "^28.0.8",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
     "types-webpack-bundler": "^1.0.2"
   },
@@ -114,7 +115,7 @@
     "acorn": "^8.7.1",
     "autoprefixer": "^10.4.0",
     "babel-core": "^6.26.3",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^28.0.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-react-docgen": "^4.2.1",
     "babel-plugin-react-require": "^3.1.3",
@@ -140,7 +141,7 @@
     "eslint-plugin-storybook": "^0.5.5",
     "execa": "^5.1.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
+    "jest": "^28.0.0",
     "json-loader": "^0.5.7",
     "jsontosass": "^0.2.0",
     "lerna-changelog": "^2.2.0",
