--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "autosize": "^5.0.1",
     "classnames": "^2.3.1",
     "detect-browser": "^5.3.0",
+    "jest-environment-jsdom": "^28.1.3",
     "lodash": "^4.17.21",
     "monday-ui-style": "0.1.134",
     "prop-types": "^15.8.1",
@@ -73,7 +74,6 @@
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-window": "^1.8.7",
     "react-windowed-select": "^2.0.4",
-    "ts-jest": "^28.0.8",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
     "types-webpack-bundler": "^1.0.2"
   },
@@ -172,6 +172,7 @@
     "stylelint-config-standard-scss": "^3.0.0",
     "svg2react-icon": "^3.1.178",
     "terser-webpack-plugin": "^5.3.0",
+    "ts-jest": "^28.0.8",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.3",
     "webpack": "^5.73.0",
