--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "autosize": "^5.0.1",
     "classnames": "^2.3.1",
     "detect-browser": "^5.3.0",
-    "jest-environment-jsdom": "^28.1.3",
     "lodash": "^4.17.21",
     "monday-ui-style": "0.1.134",
     "prop-types": "^15.8.1",
@@ -73,9 +72,7 @@
     "react-transition-group": "^4.4.2",
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-window": "^1.8.7",
-    "react-windowed-select": "^2.0.4",
-    "tsconfig-paths-webpack-plugin": "^4.0.0",
-    "types-webpack-bundler": "^1.0.2"
+    "react-windowed-select": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
@@ -115,7 +112,7 @@
     "acorn": "^8.7.1",
     "autoprefixer": "^10.4.0",
     "babel-core": "^6.26.3",
-    "babel-jest": "^28.0.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.3",
     "babel-plugin-react-docgen": "^4.2.1",
     "babel-plugin-react-require": "^3.1.3",
@@ -141,7 +138,7 @@
     "eslint-plugin-storybook": "^0.5.5",
     "execa": "^5.1.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^28.0.0",
+    "jest": "^26.6.3",
     "json-loader": "^0.5.7",
     "jsontosass": "^0.2.0",
     "lerna-changelog": "^2.2.0",
@@ -172,7 +169,7 @@
     "stylelint-config-standard-scss": "^3.0.0",
     "svg2react-icon": "^3.1.178",
     "terser-webpack-plugin": "^5.3.0",
-    "ts-jest": "^28.0.8",
+    "ts-jest": "^26.0.0",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.3",
     "webpack": "^5.73.0",
