--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,9 @@
     "allowJs": true,
     "target": "es6",
     "module": "commonjs",
-    "sourceMap": true,
+    "sourceMap": false,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "outDir": "dist",
     "declarationDir": "dist/types",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
