code review notes

--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "test:jest:update": "npm run test:jest -- -u",
     "test:jest:coverage": "npm run test:jest -- --coverage",
     "start": "npm run build-react-icons && webpack --mode production --watch --config webpack/default.config.js",
-    "build": "npm run build-react-icons && webpack --mode production --config webpack/default.config.js && npm run build:esm && npm run build:types-index",
-    "build:esm": "./scripts/build-esm.js",
-    "build:types-index": "./scripts/build-types-index.js",
+    "build": "npm run build-react-icons && webpack --mode production --config webpack/default.config.js && npm run build:exports",
+    "build:exports": "./scripts/build-exports.js",
     "storybook": "start-storybook -p 7007",
     "build-storybook": "build-storybook",
     "deploy-storybook": "storybook-to-ghpages",
