--- a/css-modules-automation/codemod/package.json
+++ b/css-modules-automation/codemod/package.json
@@ -43,6 +43,7 @@
     "modify react-core/formatted-number": "shell_scripts/run.sh ../../src/components/FormattedNumber/FormattedNumber.jsx",
     "modify react-core/field-label": "shell_scripts/run.sh ../../src/components/FieldLabel/FieldLabel.jsx",
     "modify react-core/list-title": "shell_scripts/run.sh ../../src/components/ListTitle/ListTitle.jsx",
+    "modify react-core/split-button": "shell_scripts/run.sh ../../src/components/SplitButton/SplitButton.jsx",
 
     "modify tests": "shell_scripts/run.sh tests",
     "modify tests/anchor-list-item": "shell_scripts/run.sh tests/anchor-list-item.jsx",
