Add support in getTemplateLiteralParts for MemberExpressions + print refactoring

--- a/css-modules-automation/codemod/package.json
+++ b/css-modules-automation/codemod/package.json
@@ -44,6 +44,7 @@
     "modify react-core/field-label": "shell_scripts/run.sh ../../src/components/FieldLabel/FieldLabel.jsx",
     "modify react-core/list-title": "shell_scripts/run.sh ../../src/components/ListTitle/ListTitle.jsx",
     "modify react-core/split-button": "shell_scripts/run.sh ../../src/components/SplitButton/SplitButton.jsx",
+    "modify react-core/editable-heading": "shell_scripts/run.sh ../../src/components/EditableHeading/EditableHeading.jsx",
 
     "modify tests": "shell_scripts/run.sh tests",
     "modify tests/anchor-list-item": "shell_scripts/run.sh tests/anchor-list-item.jsx",
