Disable styleint rule for global pseudo class

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,6 +2,7 @@
   "extends": "stylelint-config-recommended-scss",
   "rules": {
     "no-descending-specificity": null,
-    "no-duplicate-selectors": null
+    "no-duplicate-selectors": null,
+    "selector-pseudo-class-no-unknown": ["global"]
   }
 }
