--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,6 +2,12 @@
   "extends": "stylelint-config-recommended-scss",
   "rules": {
     "no-descending-specificity": null,
-    "no-duplicate-selectors": null
+    "no-duplicate-selectors": null,
+    "selector-pseudo-class-no-unknown": [
+      true,
+      {
+        "ignorePseudoClasses": ["global"]
+      }
+    ]
   }
 }
