--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build:exports": "./scripts/build-exports.js",
     "build:ts-index": "./scripts/build-ts-index.js",
     "storybook": "start-storybook -p 7007",
-    "build-storybook": "build-storybook",
+    "build-storybook": "npm run build:ts-index && build-storybook",
     "deploy-storybook": "storybook-to-ghpages",
     "link-local": "npm link && npm start",
     "plop": "plop",
