--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "test:jest:stories": "testing=storybook TEST_END_FILES=jest-story jest",
     "test:jest:update": "npm run test:jest -- -u",
     "test:jest:coverage": "npm run test:jest -- --coverage",
-    "start": "npm run build-react-icons && webpack --mode production --watch --config webpack/default.config.js",
-    "build": "npm run build-react-icons && webpack --mode production --config webpack/default.config.js && npm run build:esm",
-    "build:esm": "./scripts/build-esm.js",
+    "start": "npm run build:ts-index && npm run build-react-icons && webpack --mode production --watch --config webpack/default.config.js",
+    "build": "npm run build:exports && npm run build-react-icons && webpack --mode production --config webpack/default.config.js",
+    "build:exports": "./scripts/build-exports.js",
+    "build:ts-index": "./scripts/build-ts-index.js",
     "storybook": "start-storybook -p 7007",
-    "build-storybook": "build-storybook",
+    "build-storybook": "npm run build:ts-index && build-storybook",
     "deploy-storybook": "storybook-to-ghpages",
     "link-local": "npm link && npm start",
     "plop": "plop",
@@ -167,6 +168,8 @@
     "stylelint-config-standard-scss": "^3.0.0",
     "svg2react-icon": "^3.1.178",
     "terser-webpack-plugin": "^5.3.0",
+    "ts-jest": "^26.0.0",
+    "ts-loader": "^9.3.1",
     "typescript": "^4.7.3",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.1",
