--- a/package.json
+++ b/package.json
@@ -108,6 +108,9 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/lodash": "^4.14.184",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "acorn": "^8.7.1",
     "autoprefixer": "^10.4.0",
     "babel-core": "^6.26.3",
@@ -122,7 +125,8 @@
     "chromatic": "^6.3.3",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^6.5.1",
-    "eslint": "^8.6.0",
+    "csstype": "^3.1.0",
+    "eslint": "^8.23.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
