--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "baseUrl": ".",
     "allowSyntheticDefaultImports": true,
     "jsx": "react-jsx",
-    "plugins": [{ "name": "typescript-plugin-css-modules" }]
+    "plugins": [{ "name": "typescript-plugin-css-modules" }],
+    "esModuleInterop": true
   }
 }
