--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@popperjs/core": "2.11.5",
     "@react-hook/merged-ref": "1.3.2",
     "@react-stately/toggle": "3.2.7",
+    "@types/react-transition-group": "^4.4.2",
     "autosize": "^5.0.1",
     "classnames": "^2.3.1",
     "detect-browser": "^5.3.0",
