--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "classnames": "^2.3.1",
     "detect-browser": "^5.3.0",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "monday-ui-style": "0.1.135",
     "prop-types": "^15.8.1",
     "react-inlinesvg": "^2.3.0",
@@ -109,6 +110,7 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/lodash": "^4.14.184",
+    "@types/lodash-es": "^4.17.6",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "acorn": "^8.7.1",
