--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@popperjs/core": "2.11.5",
     "@react-hook/merged-ref": "1.3.2",
     "@react-stately/toggle": "3.2.7",
+    "@types/react-dates": "^21.8.3",
     "@types/react-transition-group": "^4.4.2",
     "autosize": "^5.0.1",
     "classnames": "^2.3.1",
@@ -185,9 +186,9 @@
     "webpack-node-externals": "^3.0.0"
   },
   "peerDependencies": {
+    "moment": "^2.29.1",
     "react": ">=16.9.0",
-    "react-dom": ">=16.9.0",
-    "moment": "^2.29.1"
+    "react-dom": ">=16.9.0"
   },
   "sideEffects": [
     "*.scss",
