--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -6,7 +6,7 @@
     "selector-pseudo-class-no-unknown": [
       true,
       {
-        "ignorePseudoClasses": ["global"]
+        "ignorePseudoClasses": ["global","local"]
       }
     ]
   }
