--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "@popperjs/core": "2.11.5",
     "@react-hook/merged-ref": "1.3.2",
     "@react-stately/toggle": "3.2.7",
+    "a11y-dialog": "^7.5.0",
     "autosize": "^5.0.1",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.1",
     "detect-browser": "^5.3.0",
     "lodash": "^4.17.21",
