--- a/package.json
+++ b/package.json
@@ -56,23 +56,22 @@
   },
   "homepage": "https://github.com/mondaycom/monday-ui-react-core#readme",
   "dependencies": {
-    "@popperjs/core": "2.11.5",
-    "@react-hook/merged-ref": "1.3.2",
+    "@popperjs/core": "2.11.6",
+    "@react-hook/merged-ref": "^1.3.2",
     "@react-stately/toggle": "3.2.7",
-    "a11y-dialog": "^7.5.0",
+    "a11y-dialog": "^7.5.2",
     "autosize": "^5.0.1",
     "body-scroll-lock": "^4.0.0-beta.0",
-    "classnames": "^2.3.1",
+    "classnames": "^2.3.2",
     "detect-browser": "^5.3.0",
     "lodash": "^4.17.21",
-    "lodash-es": "^4.17.21",
     "monday-ui-style": "0.1.139",
     "prop-types": "^15.8.1",
-    "react-inlinesvg": "^2.3.0",
+    "react-inlinesvg": "^3.0.1",
     "react-popper": "^2.3.0",
     "react-select": "^3.2.0",
-    "react-transition-group": "^4.4.2",
-    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-transition-group": "^4.4.5",
+    "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.7",
     "react-windowed-select": "^2.0.4"
   },
