--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/lodash": "^4.14.184",
     "@types/lodash-es": "^4.17.6",
+    "@types/react-transition-group": "^4.4.5",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "acorn": "^8.7.1",
