Fix package.json scripts - as in master

--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "test:jest:stories": "testing=storybook TEST_END_FILES=jest-story jest",
     "test:jest:update": "npm run test:jest -- -u",
     "test:jest:coverage": "npm run test:jest -- --coverage",
-    "start": "npm run build-react-icons && webpack --mode production --watch --config webpack/default.config.js",
-    "build": "npm run build-react-icons && webpack --mode production --config webpack/default.config.js && npm run build:esm",
-    "build:esm": "./scripts/build-esm.js",
+    "start": "npm run build:ts-index && npm run build-react-icons && webpack --mode production --watch --config webpack/default.config.js",
+    "build": "npm run build:exports && npm run build-react-icons && webpack --mode production --config webpack/default.config.js",
+    "build:exports": "./scripts/build-exports.js",
+    "build:ts-index": "./scripts/build-ts-index.js",
     "storybook": "start-storybook -p 7007",
     "build-storybook": "npm run build:ts-index && build-storybook",
     "deploy-storybook": "storybook-to-ghpages",
