--- a/package.json
+++ b/package.json
@@ -91,6 +91,9 @@
     "@jest/transform": "^26.6.2",
     "@mdx-js/loader": "^2.0.0-rc.2",
     "@mdx-js/mdx": "^2.0.0-rc.2",
+    "@rollup/plugin-babel": "^6.0.2",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@storybook/addon-a11y": "6.5.7",
     "@storybook/addon-actions": "6.5.7",
     "@storybook/addon-controls": "6.5.7",
@@ -167,6 +170,10 @@
     "react-markdown": "^7.1.0",
     "react-resizable": "^3.0.4",
     "react-test-renderer": "^16.14.0",
+    "rollup": "^2.79.1",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.34.1",
     "sass": "^1.51.0",
     "sass-loader": "^12.4.0",
     "snapshot-diff": "^0.9.0",
