--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "homepage": "https://github.com/mondaycom/monday-ui-react-core#readme",
   "dependencies": {
+    "@popperjs/core": "2.11.6",
     "@react-hook/merged-ref": "^1.3.2",
     "@react-stately/toggle": "3.2.7",
     "@types/react-dates": "^21.8.3",
