--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "build:commonjs": "webpack --mode production --config webpack/default.config.js",
     "build:esm": "rollup -c",
     "build:react-icons": "svg2react-icon --typescript --keep-colors node_modules/monday-ui-style/src/Icons src/components/Icon/Icons",
-    "storybook": "storybook=true start-storybook -p 7007",
-    "build-storybook": "storybook=true build-storybook",
+    "storybook": "start-storybook -p 7007",
+    "build-storybook": "build-storybook",
     "deploy-storybook": "storybook-to-ghpages",
     "link-local": "npm link && npm start",
     "plop": "plop",
