Use lodash-es instead of lodash - to align our dependency and better support esm (#1063)
* lodash-es

* lodash lint

--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "autosize": "^5.0.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.2",
-    "lodash": "^4.17.21",
     "monday-ui-style": "0.1.148",
     "prop-types": "^15.8.1",
     "react-dates": "21.8.0",
@@ -148,6 +147,7 @@
     "eslint-plugin-jest": "^25.3.4",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-lodash": "^7.4.0",
     "eslint-plugin-markdown": "^2.2.1",
     "eslint-plugin-only-warn": "^1.0.3",
     "eslint-plugin-prettier": "^4.0.0",
@@ -160,6 +160,7 @@
     "json-loader": "^0.5.7",
     "jsontosass": "^0.2.0",
     "lerna-changelog": "^2.2.0",
+    "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^2.4.5",
     "plop": "2.7.6",
     "postcss": "^8.4.5",
