--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.7",
     "react-windowed-select": "^2.0.4",
-    "style-inject": "^0.3.0"
+    "style-inject": "^0.3.0",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
@@ -160,7 +161,6 @@
     "json-loader": "^0.5.7",
     "jsontosass": "^0.2.0",
     "lerna-changelog": "^2.2.0",
-    "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^2.4.5",
     "plop": "2.7.6",
     "postcss": "^8.4.5",
