--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "autosize": "^5.0.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.2",
-    "monday-ui-style": "0.1.148",
+    "lodash-es": "^4.17.21",
+    "monday-ui-style": "0.1.149",
     "prop-types": "^15.8.1",
     "react-dates": "21.8.0",
     "react-inlinesvg": "^3.0.1",
@@ -74,8 +75,7 @@
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.7",
     "react-windowed-select": "^2.0.4",
-    "style-inject": "^0.3.0",
-    "lodash-es": "^4.17.21"
+    "style-inject": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
