--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -12,7 +12,7 @@ jobs:
           node-version: 16.13.1
       - name: Install
         run: |
-          npm install
+          npm ci
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
@@ -30,7 +30,7 @@ jobs:
           node-version: 16.13.1
       - name: Install
         run: |
-          npm install
+          npm ci
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
@@ -48,7 +48,7 @@ jobs:
           node-version: 16.13.1
       - name: Install
         run: |
-          npm install
+          npm ci
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
@@ -66,7 +66,7 @@ jobs:
           node-version: 16.13.1
       - name: Install
         run: |
-          npm install
+          npm ci
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
@@ -84,7 +84,7 @@ jobs:
           node-version: 16.13.1
       - name: Install
         run: |
-          npm install
+          npm ci
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
