--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -7,12 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version-file: ".nvmrc"
       - name: Install
         run: |
-          npm install
+          npm ci
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
@@ -25,12 +25,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version-file: ".nvmrc"
       - name: Install
         run: |
-          npm install
+          npm ci
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
@@ -43,12 +43,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version-file: ".nvmrc"
       - name: Install
         run: |
-          npm install
+          npm ci
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
@@ -61,12 +61,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version-file: ".nvmrc"
       - name: Install
         run: |
-          npm install
+          npm ci
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
@@ -79,12 +79,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version-file: ".nvmrc"
       - name: Install
         run: |
-          npm install
+          npm ci
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
