--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -1,6 +1,7 @@
 # This workflow will ensure all PRs are labeled so we can later create releases
 
-name: PR labeling for release
+name: PR labeles for prerelease
+
 on:
   pull_request:
     types: [labeled, unlabeled]
