--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -15,9 +15,19 @@ jobs:
         with:
           all_of: "PR: Prerelease 🚀"
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Prepare env
-        if: success()
-        uses: ./.github/workflows/prepare-release.yml
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 16
+          registry-url: https://registry.npmjs.org/
+      - name: Install dependencies
+        run: npm ci
+      - name: Set up git credentials
+        run: |
+          git config --global user.name 'ci'
+          git config --global user.email 'deploy@monday.com'ßß
       - name: Update version
         if: success()
         run: npm version prerelease
