--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -34,6 +34,8 @@ jobs:
       - name: Commit and push changes
         if: success()
         run: |
+          git add .
+          git commit -m "Release version $(node -e "console.log(require('./package.json').version)")"
           git tag prerelease
           git push --follow-tags
       - name: Publish the new version to npm
