--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -38,8 +38,14 @@ jobs:
           git tag prerelease
           git push --follow-tags
       - name: Publish the new version to npm
-        if: 1==2
+        if: success()
         run: | # Compare the latest version and the current version and publish only if the version changed
           if [ $(npm view monday-ui-react-core version) != $(node -e "console.log(require('./package.json').version)") ]; then npm run build && npm publish --tag prerelease; else echo ''; fi;
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+       - uses: "marvinpinto/action-automatic-releases@latest"
+         if: success()
+         with:
+           repo_token: "${{ secrets.GITHUB_TOKEN }}"
+           prerelease: true
+           automatic_release_tag: prerelease
