--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           git config --global user.name 'ci'
           git config --global user.email 'deploy@monday.com'ßß
-      - name: Update version
+      - name: Push Updated version
         if: success()
         env:
           BRANCH_NAME: ${{ github.head_ref }}
