--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -1,14 +1,18 @@
 # This workflow will ensure all PRs are labeled so we can later create releases
 
-name: PR labeles for prerelease
+name: Prerelease
 
 on:
   pull_request:
-    types: [labeled, unlabeled]
+    types: [labeled]
+    if: "contains(github.event.pull_request.labels.*.name, 'PR: Prerelease 🚀')"
 
 jobs:
   prerelease:
     runs-on: ubuntu-latest
+    needs:
+      - Test
+      - Chromatic
     steps:
       - name: Check for prerelase label
         uses: docker://agilepathway/pull-request-label-checker:latest
