--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -21,6 +21,7 @@ jobs:
       - Test
       - Chromatic
       - ensure-prerelease-label
+    if: ${{ job.status == 'success' }}
     steps:
       - uses: actions/checkout@v2
         with:
