--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -17,6 +17,7 @@ jobs:
           all_of: "PR: Prerelease 🚀"
           repo_token: ${{ secrets.GITHUB_TOKEN }}
   prerelease:
+    runs-on: ubuntu-latest
     needs:
       - Test
       - Chromatic
