--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -19,8 +19,8 @@ jobs:
   prerelease:
     runs-on: ubuntu-latest
     needs:
-      - Test
-      - Chromatic
+      - test-workflow
+      - chromatic
       - ensure-prerelease-label
     if: ${{ needs.Test.result == 'success' && needs.Chromatic.result == 'success' && needs.ensure-prerelease-label.result == 'success' }}
     steps:
