--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Set up git credentials
         run: |
           git config --global user.name 'ci'
-          git config --global user.email 'deploy@monday.com'ßß
+          git config --global user.email 'deploy@monday.com'
       - name: Update version
         if: success()
         run: npm version prerelease
@@ -36,12 +36,38 @@ jobs:
         if: success()
         run: |
           git add .
-          git commit -m "Release version $(node -e "console.log(require('./package.json').version)")"
+          echo "package_version=$(node -e "console.log(require('./package.json').version)")" >> $GITHUB_ENV
+          echo "package version = ${{ env.package_version }}"
+          git commit -m "Release version ${{ env.package_version }}"
           git tag prerelease
           git push --follow-tags
       - name: Publish the new version to npm
         if: 1==2
         run: | # Compare the latest version and the current version and publish only if the version changed
-          if [ $(npm view monday-ui-react-core version) != $(node -e "console.log(require('./package.json').version)") ]; then npm run build && npm publish --tag prerelease; else echo ''; fi;
+          if [ $(npm view monday-ui-react-core version) != ${{ env.package_version }} ]; then npm run build && npm publish --tag prerelease; else echo ''; fi;
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+      - name: Find Comment
+        if: always()
+        uses: peter-evans/find-comment@v1
+        id: fc
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          comment-author: "github-actions[bot]"
+          body-includes: "Prerelease version published"
+      - name: Delete comment
+        if: ${{ steps.fc.outputs.comment-id }} # Otherwise it fails the workflow
+        uses: jungwinter/comment@v1
+        with:
+          type: delete
+          comment_id: ${{ steps.fc.outputs.comment-id }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create comment
+        if: always()
+        uses: peter-evans/create-or-update-comment@v1
+        with:
+          comment-id: ${{ steps.fc.outputs.comment-id }}
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            Prerelease version published: ${{ env.package_version }}
+          edit-mode: create
