--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -6,8 +6,7 @@ on:
   push:
   workflow_run:
     workflows: ["Test", "Chromatic"]
-    types:
-      - completed
+    types: [completed]
 
 jobs:
   prerelease:
