--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -3,10 +3,10 @@
 name: Prerelease
 
 on:
-  push:
   workflow_run:
     workflows: ["Test", "Chromatic"]
-    types: [completed]
+    types:
+      - completed
 
 jobs:
   prerelease:
